custom ant env added

--- a/src/demo_ant.ipynb
+++ b/src/demo_ant.ipynb
@@ -51,6 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Ant env -SJ\n",
       "Environment initialized.\n"
      ]
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +467,26 @@
     "    env.step(np.zeros(act_dim))\n",
     "    t = env.sim.data.time\n",
     "    print ('tick:[%d] time:[%.2f]sec'%(tick,t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.096, 0.066, 0.371, 0.017, 0.075, 0.256, 0.004, 0.659])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(8)*np.random.rand(8)"
    ]
   },
   {
