--- a/src/demo_ant.ipynb
+++ b/src/demo_ant.ipynb
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline  \n",
     "%config InlineBackend.figure_format = 'retina'\n",
-    "from gym.envs import mujoco\n",
+    "from custom_ant import AntEnvCustom\n",
     "np.set_printoptions(precision=3)\n",
     "print (\"Packages Loaded\")"
    ]
@@ -51,13 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ant env -SJ\n",
+      "Ant custom env -SJ\n",
       "Environment initialized.\n"
      ]
     }
    ],
    "source": [
-    "env = mujoco.AntEnv()\n",
+    "env = AntEnvCustom()\n",
     "obs_dim = env.observation_space.shape[0]\n",
     "act_dim = env.action_space.shape[0]\n",
     "env.reset() # Reset \n",
@@ -467,26 +467,6 @@
     "    env.step(np.zeros(act_dim))\n",
     "    t = env.sim.data.time\n",
     "    print ('tick:[%d] time:[%.2f]sec'%(tick,t))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.096, 0.066, 0.371, 0.017, 0.075, 0.256, 0.004, 0.659])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.rand(8)*np.random.rand(8)"
    ]
   },
   {
