--- a/src/demo_ant.ipynb
+++ b/src/demo_ant.ipynb
@@ -762,7 +762,7 @@
    "source": [
     "import skvideo.io\n",
     "outputdata = np.asarray(frames).astype(np.uint8)\n",
-    "skvideo.io.vwrite('ant_demo.mp4', outputdata)\n",
+    "skvideo.io.vwrite('vids/ant_demo.mp4', outputdata)\n",
     "print (\"Done.\")"
    ]
   },
