--- a/src/demo_dlpg.ipynb
+++ b/src/demo_dlpg.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "tf.reset_default_graph() # Reset Graph\n",
     "AntEnv = antTrainEnv_class(_tMax=3,_nAnchor=20,_maxRepeat=3,_hypGain=1/4,_hypLen=1/4,_pGain=0.01,\n",
-    "            _zDim=16,_hDims=[64,64],_vaeActv=tf.nn.elu,\n",
+    "            _zDim=16,_hDims=[64,64],_vaeActv=tf.nn.relu,\n",
     "            _PLOT_GRP=True)"
    ]
   },
@@ -66,10 +66,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_VID = True\n",
+    "SAVE_VID = False\n",
     "MAKE_GIF = False # Probably unnecessary \n",
-    "PLOT_GRP = False \n",
-    "PLOT_EVERY = 5"
+    "PLOT_GRP = True \n",
+    "PLOT_EVERY = 10"
    ]
   },
   {
@@ -84,8 +84,9 @@
     "maxEpoch  = 500\n",
     "batchSize = 100\n",
     "print (\"Start training...\")\n",
-    "AntEnv.train_dlpg(_sess=sess,_seed=0,_maxEpoch=maxEpoch,_batchSize=batchSize,_nIter4update=1e3,\n",
-    "                 _SAVE_VID=SAVE_VID,_MAKE_GIF=MAKE_GIF,_PLOT_GRP=PLOT_GRP,_PLOT_EVERY=PLOT_EVERY)"
+    "AntEnv.train_dlpg(_sess=sess,_seed=0,_maxEpoch=maxEpoch,_batchSize=batchSize,_nIter4update=1e4,\n",
+    "                 _SAVE_VID=SAVE_VID,_MAKE_GIF=MAKE_GIF,_PLOT_GRP=PLOT_GRP,_PLOT_EVERY=PLOT_EVERY,\n",
+    "                 _DO_RENDER=False)"
    ]
   },
   {
@@ -146,6 +147,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
